--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="listing">
             <!-- Property 1 -->
             <div class="property-card">
-                <img src="images/property1.jpg" alt="Modern Apartment">
+                <img src="https://github.com/panda002/ajitrentals/blob/main/images/property1.jpg" alt="Property Image">
                 <div class="details">
                     <h2>Modern Apartment</h2>
                     <p>2 Beds, 1 Bath</p>
