--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <!-- Property 2 -->
             <div class="property-card">
-                <img src="images/property2.jpg" alt="Cozy House">
+                <img src="https://github.com/panda002/ajitrentals/blob/main/images/property2.jpg" alt="Property Image">
                 <div class="details">
                     <h2>Cozy House</h2>
                     <p>3 Beds, 2 Baths</p>
@@ -35,7 +35,7 @@
             </div>
             <!-- Property 3 -->
             <div class="property-card">
-                <img src="images/property3.jpg" alt="Luxury Villa">
+                <img src="https://github.com/panda002/ajitrentals/blob/main/images/property3.jpg" alt="Property Image">
                 <div class="details">
                     <h2>Luxury Villa</h2>
                     <p>4 Beds, 3 Baths</p>
