--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 <body>
     <header>
         <h1>Rental Listings</h1>
+        <p class="description">
+            Welcome to Ajit Rentals! Explore our wide selection of beautiful properties tailored to meet your needs. 
+            From cozy apartments to luxurious villas, we’ve got something for everyone. 
+            Come take a look and find your dream rental today!
+        </p>
     </header>
     <div class="container">
         <div class="listing">
             <!-- Property 1 -->
             <div class="property-card">
-                <img src="https://github.com/panda002/ajitrentals/blob/main/images/property1.jpg" alt="Property Image1">
+                <img src="images/property1.jpg" alt="Property Image1">
                 <div class="details">
                     <h2>Modern Apartment</h2>
                     <p>2 Beds, 1 Bath</p>
@@ -25,7 +30,7 @@
             </div>
             <!-- Property 2 -->
             <div class="property-card">
-                <img src="https://github.com/panda002/ajitrentals/blob/main/images/property2.jpg" alt="Property Image2">
+                <img src="images/property2.jpg" alt="Property Image2">
                 <div class="details">
                     <h2>Cozy House</h2>
                     <p>3 Beds, 2 Baths</p>
@@ -35,7 +40,7 @@
             </div>
             <!-- Property 3 -->
             <div class="property-card">
-                <img src="https://github.com/panda002/ajitrentals/blob/main/images/property3.jpg" alt="Property Image3">
+                <img src="images/property3.jpg" alt="Property Image3">
                 <div class="details">
                     <h2>Luxury Villa</h2>
                     <p>4 Beds, 3 Baths</p>
