--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rental Listings</title>
+    <title>Welcmoe to out Rental Listings!!</title>
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
         <h1>Rental Listings</h1>
         <p class="description">
             Welcome to Ajit Rentals! Explore our wide selection of beautiful properties tailored to meet your needs. 
-            From cozy apartments to luxurious villas, we’ve got something for everyone. 
+            From Master Bedroom with private bath to private room with shared batch, we’ve got something for everyone. 
             Come take a look and find your dream rental today!
         </p>
     </header>
@@ -22,30 +22,82 @@
             <div class="property-card">
                 <img src="images/property1.jpg" alt="Property Image1">
                 <div class="details">
-                    <h2>Modern Apartment</h2>
-                    <p>2 Beds, 1 Bath</p>
-                    <p>City Center</p>
-                    <p class="price">$1,500/month</p>
+                    <h2>Single Family</h2>
+                    <p>5 Beds, 3 Bath</p>
+                    <p>Dallas, GA</p>
+                    <p class="price">$ - Call for Details</p>
                 </div>
             </div>
             <!-- Property 2 -->
             <div class="property-card">
                 <img src="images/property2.jpg" alt="Property Image2">
                 <div class="details">
-                    <h2>Cozy House</h2>
-                    <p>3 Beds, 2 Baths</p>
-                    <p>Suburb Area</p>
-                    <p class="price">$2,000/month</p>
+                    <h2>Single Family</h2>
+                    <p>5 Beds, 3 Bath</p>
+                    <p>Charlotte, NC</p>
+                    <p class="price">$ - Call for Details</p>
+                    <section>
+                        <h3>Common Spaces:</h3>
+                        <ul>
+                            <li>Fully furnished common areas include a large living room, dining area, and well-equipped kitchen.</li>
+                            <li>In-unit washer and dryer for your laundry needs.</li>
+                        </ul>
+                        <h3>Location:</h3>
+                        <ul>
+                            <li>Conveniently situated just a five-minute drive from UNC Charlotte.</li>
+                            <li>Walking distance to Walmart for all your shopping essentials.</li>
+                        </ul>
+                        <p>Don’t miss out on this fantastic opportunity! Contact us today to schedule a viewing or for more details.</p>
+                    </section>
+                    <section>
+                        <h3>Unit Details:</h3>
+                        <ul>
+                            <li>House</li>
+                            <li>5 beds · 3 baths</li>
+                            <li>2300 square feet</li>
+                            <li>Central AC</li>
+                            <li>Central heating</li>
+                            <li>In-unit laundry</li>
+                            <li>Street parking</li>
+                            <li>4 persons live here</li>
+                        </ul>
+                    </section>
                 </div>
             </div>
             <!-- Property 3 -->
             <div class="property-card">
                 <img src="images/property3.jpg" alt="Property Image3">
                 <div class="details">
-                    <h2>Luxury Villa</h2>
-                    <p>4 Beds, 3 Baths</p>
-                    <p>Near the Beach</p>
-                    <p class="price">$4,500/month</p>
+                    <h2>Single Family</h2>
+                    <p>5 Beds, 3 Bath</p>
+                    <p>Charlotte, NC</p>
+                    <p class="price">$ - Call for Details</p>
+                    <section>
+                        <h3>Common Spaces:</h3>
+                        <ul>
+                            <li>Fully furnished common areas include a large living room, dining area, and well-equipped kitchen.</li>
+                            <li>In-unit washer and dryer for your laundry needs.</li>
+                        </ul>
+                        <h3>Location:</h3>
+                        <ul>
+                            <li>Conveniently situated just a five-minute drive from UNC Charlotte.</li>
+                            <li>Walking distance to Walmart for all your shopping essentials.</li>
+                        </ul>
+                        <p>Don’t miss out on this fantastic opportunity! Contact us today to schedule a viewing or for more details.</p>
+                    </section>
+                    <section>
+                        <h3>Unit Details:</h3>
+                        <ul>
+                            <li>House</li>
+                            <li>5 beds · 3 baths</li>
+                            <li>2300 square feet</li>
+                            <li>Central AC</li>
+                            <li>Central heating</li>
+                            <li>In-unit laundry</li>
+                            <li>Street parking</li>
+                            <li>4 persons live here</li>
+                        </ul>
+                    </section>
                 </div>
             </div>
         </div>
