--- a/index.html
+++ b/index.html
@@ -3,103 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcmoe to out Rental Listings!!</title>
-    <!-- Link to the external CSS file -->
+    <title>Rental Listings - Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Inline CSS for quick setup */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background: #007BFF;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+            gap: 20px;
+        }
+
+        .location-card {
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            width: 300px;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .location-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .location-card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .location-card h2 {
+            margin: 10px 0;
+            font-size: 1.5rem;
+            color: #333;
+        }
+
+        .location-card p {
+            margin: 10px 15px;
+            color: #666;
+        }
+
+        .location-card a {
+            display: inline-block;
+            margin: 15px 0;
+            padding: 10px 20px;
+            background: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .location-card a:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Rental Listings</h1>
-        <p class="description">
-            Welcome to Ajit Rentals! Explore our wide selection of beautiful properties tailored to meet your needs. 
-            From Master Bedroom with private bath to private room with shared batch, we’ve got something for everyone. 
-            Come take a look and find your dream rental today!
-        </p>
+        <h1>Welcome to Ajit Rentals</h1>
+        <p>Choose your preferred location to explore rental properties!</p>
     </header>
     <div class="container">
-        <div class="listing">
-            <!-- Property 1 -->
-            <div class="property-card">
-                <img src="images/property1.jpg" alt="Property Image1">
-                <div class="details">
-                    <h2>Single Family</h2>
-                    <p>5 Beds, 3 Bath</p>
-                    <p>Dallas, GA</p>
-                    <p class="price">$ - Call for Details</p>
-                </div>
-            </div>
-            <!-- Property 2 -->
-            <div class="property-card">
-                <img src="images/property2.jpg" alt="Property Image2">
-                <div class="details">
-                    <h2>Single Family</h2>
-                    <p>5 Beds, 3 Bath</p>
-                    <p>Charlotte, NC</p>
-                    <p class="price">$ - Call for Details</p>
-                    <section>
-                        <h3>Common Spaces:</h3>
-                        <ul>
-                            <li>Fully furnished common areas include a large living room, dining area, and well-equipped kitchen.</li>
-                            <li>In-unit washer and dryer for your laundry needs.</li>
-                        </ul>
-                        <h3>Location:</h3>
-                        <ul>
-                            <li>Conveniently situated just a five-minute drive from UNC Charlotte.</li>
-                            <li>Walking distance to Walmart for all your shopping essentials.</li>
-                        </ul>
-                        <p>Don’t miss out on this fantastic opportunity! Contact us today to schedule a viewing or for more details.</p>
-                    </section>
-                    <section>
-                        <h3>Unit Details:</h3>
-                        <ul>
-                            <li>House</li>
-                            <li>5 beds · 3 baths</li>
-                            <li>2300 square feet</li>
-                            <li>Central AC</li>
-                            <li>Central heating</li>
-                            <li>In-unit laundry</li>
-                            <li>Street parking</li>
-                            <li>4 persons live here</li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-            <!-- Property 3 -->
-            <div class="property-card">
-                <img src="images/property3.jpg" alt="Property Image3">
-                <div class="details">
-                    <h2>Single Family</h2>
-                    <p>5 Beds, 3 Bath</p>
-                    <p>Charlotte, NC</p>
-                    <p class="price">$ - Call for Details</p>
-                    <section>
-                        <h3>Common Spaces:</h3>
-                        <ul>
-                            <li>Fully furnished common areas include a large living room, dining area, and well-equipped kitchen.</li>
-                            <li>In-unit washer and dryer for your laundry needs.</li>
-                        </ul>
-                        <h3>Location:</h3>
-                        <ul>
-                            <li>Conveniently situated just a five-minute drive from UNC Charlotte.</li>
-                            <li>Walking distance to Walmart for all your shopping essentials.</li>
-                        </ul>
-                        <p>Don’t miss out on this fantastic opportunity! Contact us today to schedule a viewing or for more details.</p>
-                    </section>
-                    <section>
-                        <h3>Unit Details:</h3>
-                        <ul>
-                            <li>House</li>
-                            <li>5 beds · 3 baths</li>
-                            <li>2300 square feet</li>
-                            <li>Central AC</li>
-                            <li>Central heating</li>
-                            <li>In-unit laundry</li>
-                            <li>Street parking</li>
-                            <li>4 persons live here</li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
+        <!-- Dallas, Georgia -->
+        <div class="location-card">
+            <img src="images/atlanta.jpg" alt="Dallas, Georgia">
+            <h2>Dallas, Georgia</h2>
+            <p>Explore cozy homes and spacious apartments in Dallas, GA, a great place to call home!</p>
+            <a href="dallasgeorgia.html">View Properties</a>
+        </div>
+        <!-- Charlotte, North Carolina -->
+        <div class="location-card">
+            <img src="images/charlotte.jpg" alt="Charlotte, North Carolina">
+            <h2>Charlotte, North Carolina</h2>
+            <p>Discover premium rental properties in Charlotte, NC, a bustling city with charm!</p>
+            <a href="charlotte.html">View Properties</a>
         </div>
     </div>
 </body>
