--- a/charlotte.html
+++ b/charlotte.html
@@ -18,17 +18,25 @@
             <div class="property-card" onclick="openModal('modal2')">
                 <img src="images/property2.jpg" alt="Property Image2">
                 <h2>Single Family</h2>
-                <p>5 Beds, 3 Baths</p>
+                <p>🛏️ Bedrooms: 5 · 🚿 Bathrooms: 3</p>
                 <p>Charlotte, NC</p>
+                <p>"Rooms Available - 1"</p>
                 <p class="price">$ - Call for Details</p>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 75%;"></div>
+                </div>
             </div>
             <!-- Property 3 -->
             <div class="property-card" onclick="openModal('modal3')">
                 <img src="images/property3.jpg" alt="Property Image3">
                 <h2>Single Family</h2>
-                <p>5 Beds, 3 Baths</p>
+                <p>🛏️ Bedrooms: 5 · 🚿 Bathrooms: 3</p>
                 <p>Charlotte, NC</p>
+                <p>"Rooms Available - 1"</p>
                 <p class="price">$ - Call for Details</p>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 75%;"></div>
+                </div>
             </div>
         </div>
     </div>
