--- a/charlotte.html
+++ b/charlotte.html
@@ -16,7 +16,7 @@
         <div class="listing">
             <!-- Property 2 -->
             <div class="property-card" onclick="openModal('modal2')">
-                <img src="images/property2.jpg" alt="Property Image2">
+                <img src="images/13813circledr/property2.JPG" alt="Property Image2">
                 <h2>Single Family</h2>
                 <p>🛏️ Bedrooms: 5 · 🚿 Bathrooms: 3</p>
                 <p>Charlotte, NC</p>
@@ -28,7 +28,7 @@
             </div>
             <!-- Property 3 -->
             <div class="property-card" onclick="openModal('modal3')">
-                <img src="images/property3.jpg" alt="Property Image3">
+                <img src="images/13730circledrive/property3.JPG" alt="Property Image3">
                 <h2>Single Family</h2>
                 <p>🛏️ Bedrooms: 5 · 🚿 Bathrooms: 3</p>
                 <p>Charlotte, NC</p>
