--- a/dallasgeorgia.html
+++ b/dallasgeorgia.html
@@ -16,7 +16,7 @@
         <div class="listing">
             <!-- Property 1 -->
             <div class="property-card">
-                <img src="images/property1.jpg" alt="Property Image1">
+                <img src="images/147highgroveway/property1.JPG" alt="Property Image1">
                 <div class="details">
                     <h2>Single Family</h2>
                     <p>5 Beds, 3 Bath</p>
